Fix warning with newInstance method.
http://errorprone.info/bugpattern/ClassNewInstance